# envee

./: Cargo.toml  README.md  dist-workspace.toml  justfile
.github/workflows/: main.yml  pr.yml
src/: args.rs  config.rs  main.rs  versions.rs
src/domain/: log.rs  mod.rs  version.rs
src/service/: diff.rs  github.rs  mod.rs
src/view/: html.rs  log.rs  mod.rs  output.rs  table.rs  testdata.rs
src/view/assets/: template.html
tests/: root_test.rs  run_test.rs
tests/assets/: invalid-data.toml  invalid-schema.toml  no-versions.toml  valid-versions.toml
tests/common/: mod.rs
