[package]
name = "envee"
version = "0.1.0-alpha.1"
edition = "2024"
authors = ["Dhruv Thakur"]
repository = "https://github.com/dhth/envee"
description = "compare application versions across environments and see git commits between them"
homepage = "https://tools.dhruvs.space/envee"
license = "MIT"
keywords = [
    "cli",
    "github",
]
categories = [
    "command-line-utilities",
]
exclude = [
    ".github",
    "justfile",
]

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive"] }
comfy-table = "7.2.1"
derive_more = { version = "2.0.1", features = ["deref", "display"] }
futures = "0.3.31"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tera = "1.20.1"
tokio = { version = "1.48.0", features = ["full"] }
toml = { version = "0.9.7", features = ["parse"] }

[dev-dependencies]
insta = { version = "1.43.2", features = ["yaml"] }
insta-cmd = "0.6.0"

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
